style(typography): tighten heading and hr spacing in prose

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -196,19 +196,24 @@ body {
 .prose h2,
 .prose h3,
 .prose h4 {
-  margin-top: 1.4em;
-  margin-bottom: 0.55em;
+  margin-top: 0.85em;
+  margin-bottom: 0.35em;
 }
 
 .prose p {
-  margin-top: 0.6em;
-  margin-bottom: 0.6em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .prose ul,
 .prose ol {
-  margin-top: 0.5em;
-  margin-bottom: 0.6em;
+  margin-top: 0.4em;
+  margin-bottom: 0.5em;
+}
+
+.prose hr {
+  margin-top: 0.8em;
+  margin-bottom: 0.8em;
 }
 
 .prose li {
